<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >
    <TextView
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_title"/>
    <TextView
        style="@style/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_input_contents"/>
    <EditText
        style="@style/inputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_input_datetime"
    />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/titleInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/title_input_date"
            />
        <EditText
            style="@style/inputStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            />
        <TextView
            style="@style/titleInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/title_input_time"
            />
        <EditText
            style="@style/inputStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            />
    </LinearLayout>
    <TextView
        style="@style/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_input_tag"/>
    <Spinner
        style="@style/inputStyle"
        android:id="@+id/planets_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tag_array"/>

    <Switch
        style="@style/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_switch_complete"
         />
    <Button
        style="@style/btStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bt_submit" />

</LinearLayout>